namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cert-manager
  labels:
    name: cert-manager
---
apiVersion: v1
kind: Namespace
metadata:
  name: growler-friday
  labels:
     name: growler-friday
---
apiVersion: v1
kind: Namespace
metadata:
  name: labs
  labels:
     name: labs
---
apiVersion: v1
kind: Namespace
metadata:
  name: thecodeboss
  labels:
     name: thecodeboss
---
apiVersion: v1
kind: Namespace
metadata:
  name: websockets
  labels:
     name: websockets
---
apiVersion: v1
kind: Namespace
metadata:
  name: cyrus-lyrics-api
  labels:
     name: cyrus-lyrics-api
---
apiVersion: v1
kind: Namespace
metadata:
  name: cyrus-lyrics-web
  labels:
     name: cyrus-lyrics-web
---
apiVersion: v1
kind: Namespace
metadata:
  name: mothercodesbest
  labels:
     name: mothercodesbest.dev
---
apiVersion: v1
kind: Namespace
metadata:
  name: nicu-calculations
  labels:
    name: nicu-calculations
---
apiVersion: v1
kind: Namespace
metadata:
  name: simple-slides
  labels:
    name: simple-slides
---
apiVersion: v1
kind: Namespace
metadata:
  name: lucas-hints-web
  labels:
    name: lucas-hints-web
---
apiVersion: v1
kind: Namespace
metadata:
  name: the-krauss-haus
  labels:
    name: the-krauss-haus
---
apiVersion: v1
kind: Namespace
metadata:
  name: ask-eddie
  labels:
    name: ask-eddie
