growler-friday-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: growler-friday-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
      - growlerfriday.com
      secretName: growler-friday-ingress-tls
  rules:
    - host: growlerfriday.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: growler-friday
              port:
                number: 80
