ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: growlerfriday.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: growler-friday
              port:
                number: 80
